Implement base usecase, base repository
 Add BaseRepository
 Add BaseUseCase
 Add Movie Reposiroty
 Add Get MovieUseCase
